Сделала непонятно что

--- a/index.html
+++ b/index.html
@@ -23,15 +23,24 @@
     </nav>
     <!--Contacts-->
     <ul class="contacts-link">
-        <li class="contacts-link-list"><a class="contacts-link-item"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contacts-link-list"><a class="contacts-link-item" href="mailto:info@devstudio.com">
+            <svg class="icon-contact" width="16" height="12"> 
+            <use href="./images/sprite.svg#icon-mail-1"></use>
+            </svg>info@devstudio.com</a></li>
+        <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
+            <svg class="icon-contact">
+        <use
+         href="./images/sprite.svg#icon-phone-1">
+        </use>
+        </svg>
+       +38 096 111 11 11</a></li>
     </ul>   
     </div>
    </header> 
 <!--main information-->
    <main>
-        <section class="main-section">
-            <div class="container">
+        <section class="main-section overlay">
+            <div class="container ">
        <h1 class="title-main">Эффективные решения для вашего бизнеса</h1>
        <button class="button" type="button">Заказать услугу</button>
     </div>
