--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <use href="./images/sprite.svg#icon-mail-1"></use>
             </svg>info@devstudio.com</a></li>
         <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
-            <svg class="icon-contact">
+            <svg class="icon-contact" width="16" height="12">
         <use
          href="./images/sprite.svg#icon-phone-1">
         </use>
