--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
              <h2 class="hide">Наши преимущества</h2>   
             <ul class="advantage-list">
             <li class="advantage-item">
+                <div class="container-icon">
+                    <svg>
+                        <use href="./images/sprite.svg#icon-antena-1"></use>
+                    </svg>
+                </div>
             <h3 class="advantage-title">Внимание к деталям</h3>
             <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
