--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,32 @@
 </head>
 <body>
         <!--Header-->
-   <header class="header">
-    <div class="container header-container">
-    <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span></a>
-    <nav>
-       <ul class="nav-items">
-            <li class="nav-items-list"><a href="index.html"        class="nav-items-link" >Студия</a></li>
-            <li class="nav-items-list"><a href="./portfolio.html"  class="nav-items-link">Портфолио</a></li>
-            <li class="nav-items-list"><a href=""                  class="nav-items-link">Контакты </a></li>
-       </ul>
-    </nav>
-    <!--Contacts-->
-    <ul class="contacts-link">
-        <li class="contacts-link-list"><a class="contacts-link-item"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>   
-    </div>    
-   </header> 
+        <header class="header">
+            <div class="container header-container">
+            <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span></a>
+            <nav>
+               <ul class="nav-items">
+                    <li class="nav-items-list"><a href="index.html"        class="nav-items-link" >Студия</a></li>
+                    <li class="nav-items-list"><a href="./portfolio.html"  class="nav-items-link">Портфолио</a></li>
+                    <li class="nav-items-list"><a href=""                  class="nav-items-link">Контакты </a></li>
+               </ul>
+            </nav>
+            <!--Contacts-->
+            <ul class="contacts-link">
+                <li class="contacts-link-list"><a class="contacts-link-item" href="mailto:info@devstudio.com">
+                    <svg class="icon-contact" width="16" height="12"> 
+                    <use href="./images/sprite.svg#icon-mail-1"></use>
+                    </svg>info@devstudio.com</a></li>
+                <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
+                    <svg class="icon-contact" width="16" height="12">
+                <use
+                 href="./images/sprite.svg#icon-phone-1">
+                </use>
+                </svg>
+               +38 096 111 11 11</a></li>
+            </ul>   
+            </div>
+           </header> 
 <!--Main information-->
 <main>
     <section class="section"> 
