--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul class="advantage-list">
             <li class="advantage-item">
                 <div class="container-icon">
-                    <svg>
+                    <svg class="icon-main">
                         <use href="./images/sprite.svg#icon-antena-1"></use>
                     </svg>
                 </div>
