--- a/index.html
+++ b/index.html
@@ -59,14 +59,29 @@
             <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="advantage-item">
+                <div class="container-icon">
+                    <svg class="icon-main">
+                        <use href="./images/sprite.svg#icon-clock-1"></use>
+                    </svg>
+                </div>
             <h3 class="advantage-title">Пунктуальность</h3>
             <p class="advantage-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
              </li>
             <li class="advantage-item">
+                <div class="container-icon">
+                    <svg class="icon-main">
+                        <use href="./images/sprite.svg#icon-computer-1"></use>
+                    </svg>
+                </div>
             <h3 class="advantage-title">Планирование</h3>
             <p class="advantage-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="advantage-item">
+                <div class="container-icon">
+                    <svg class="icon-main">
+                        <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                    </svg>
+                </div>
             <h3 class="advantage-title">Современные технологии</h3>
             <p class="advantage-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
