--- a/index.html
+++ b/index.html
@@ -108,6 +108,44 @@
         <div class="team-container">
         <h3 class="team-title-name">Игорь Демьяненко</h3>
         <p class="team-text">Product Designer</p>
+        <ul class="social-links-list">
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                    <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-facebook-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+        </ul>
         </div>
         </li>
         <li class="team-list-item">  
