--- a/index.html
+++ b/index.html
@@ -153,6 +153,44 @@
         <div class="team-container">
         <h3 class="team-title-name">Ольга Репина</h3>
         <p class="team-text">Frontend Developer</p>
+        <ul class="social-links-list">
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                    <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-facebook-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+        </ul>
         </div>
         </li>
         <li class="team-list-item">
@@ -160,6 +198,44 @@
         <div class="team-container">
         <h3 class="team-title-name">Николай Тарасов</h3>
         <p class="team-text">Marketing</p>
+        <ul class="social-links-list">
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                    <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-facebook-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+        </ul>
         </div>
         </li>
         <li class="team-list-item"> 
@@ -167,6 +243,44 @@
         <div class="team-container">
         <h3 class="team-title-name">Михаил Ермаков</h3>
         <p class="team-text">UI Designer</p>
+        <ul class="social-links-list">
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                    <a class="social-links" href="">
+                    <svg 
+                    class="social-links-icon" width="20" height="16">
+                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-facebook-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+            <li class="social-links-item"> 
+                <a class="social-links" href="">
+                <svg 
+                class="social-links-icon" width="20" height="16">
+                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                </use>
+                </svg>
+            </a>
+            </li>
+        </ul>
         </div>
         </li>
         </ul>
