--- a/index.html
+++ b/index.html
@@ -285,6 +285,65 @@
         </li>
         </ul>
     </div>
+    <div>
+        <h2 class="title">Постоянные клиенты</h2>
+        <ul class="company-icons-list">
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client1">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client2">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client3">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client4">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client5">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="company-icons-item">
+                <a class="company-links" href="./">
+                    <svg class="company-icon" width="106" height="60">
+                        <use 
+                        href="./images/sprite.svg#icon-client6">
+                        </use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
         </section>
     </main>
 <!--Footer-->
