--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         </ul>
     </div>
     <div>
-        <h2 class="title">Постоянные клиенты</h2>
+        <h2 class="title-client">Постоянные клиенты</h2>
         <ul class="company-icons-list">
             <li class="company-icons-item">
                 <a class="company-links" href="./">
