--- a/index.html
+++ b/index.html
@@ -357,6 +357,20 @@
    <li class="contacts-item-footer"> <a class="contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a> </li>
        </ul>
    </adress>
+   <div class="footer-icons">
+       <h3>присоединяйтесь</h3>
+       <ul class="list-icons">
+           <li class="item-icons">
+            <a class="social-link" href="./"> 
+                <svg class="social-icon-footer" width="44" height="44">
+                    <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
+                </svg>
+
+            </a>
+           </li>
+       </ul>
+
+   </div>
 </div>
    </footer>
 </main>
