--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
        </ul>
    </adress>
    <div class="footer-icons">
-       <h3>присоединяйтесь</h3>
+       <h3 class="title-footer">присоединяйтесь</h3>
        <ul class="list-icons">
            <li class="item-icons">
             <a class="social-link" href="./"> 
