--- a/index.html
+++ b/index.html
@@ -365,7 +365,27 @@
                 <svg class="social-icon-footer" width="44" height="44">
                     <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
                 </svg>
-
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link" href="./"> 
+                <svg class="social-icon-footer" width="44" height="44">
+                    <use href="./images/sprite.svg#icon-twitter-footer-1"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link" href="./"> 
+                <svg class="social-icon-footer" width="44" height="44">
+                    <use href="./images/sprite.svg#icon-facebook-footer-1"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link" href="./"> 
+                <svg class="social-icon-footer" width="44" height="44">
+                    <use href="./images/sprite.svg#icon-linkedin-footer-1"></use>
+                </svg>
             </a>
            </li>
        </ul>
