--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </li>
         </ul>
     </div>
-    <div>
+    <div class="clients-container">
         <h2 class="title-client">Постоянные клиенты</h2>
         <ul class="company-icons-list">
             <li class="company-icons-item">
