--- a/portfolio.html
+++ b/portfolio.html
@@ -118,8 +118,42 @@
    <li class="contacts-item-footer"> <a class="contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a> </li>
        </ul>
    </adress>
+   <div class="footer-icons">
+    <h3 class="title-footer">присоединяйтесь</h3>
+    <ul class="list-icons">
+        <li class="item-icons">
+         <a class="social-link" href="./"> 
+             <svg class="social-icon-footer" width="44" height="44">
+                 <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
+             </svg>
+         </a>
+        </li>
+        <li class="item-icons">
+         <a class="social-link" href="./"> 
+             <svg class="social-icon-footer" width="44" height="44">
+                 <use href="./images/sprite.svg#icon-twitter-footer-1"></use>
+             </svg>
+         </a>
+        </li>
+        <li class="item-icons">
+         <a class="social-link" href="./"> 
+             <svg class="social-icon-footer" width="44" height="44">
+                 <use href="./images/sprite.svg#icon-facebook-footer-1"></use>
+             </svg>
+         </a>
+        </li>
+        <li class="item-icons">
+         <a class="social-link" href="./"> 
+             <svg class="social-icon-footer" width="44" height="44">
+                 <use href="./images/sprite.svg#icon-linkedin-footer-1"></use>
+             </svg>
+         </a>
+        </li>
+    </ul>
+
 </div>
-   </footer>>
+</div>
+</footer>
 </main>
 </div>
 </body>
