--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"> 
                     </use>
                     </svg>
@@ -121,7 +121,7 @@
             <li class="social-links-item"> 
                     <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"> 
                     </use>
                     </svg>
@@ -130,7 +130,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-facebook-1"> 
                 </use>
                 </svg>
@@ -139,7 +139,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-linkedin-1"> 
                 </use>
                 </svg>
@@ -157,7 +157,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"> 
                     </use>
                     </svg>
@@ -166,7 +166,7 @@
             <li class="social-links-item"> 
                     <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"> 
                     </use>
                     </svg>
@@ -175,7 +175,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-facebook-1"> 
                 </use>
                 </svg>
@@ -184,7 +184,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-linkedin-1"> 
                 </use>
                 </svg>
@@ -202,7 +202,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"> 
                     </use>
                     </svg>
@@ -211,7 +211,7 @@
             <li class="social-links-item"> 
                     <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"> 
                     </use>
                     </svg>
@@ -220,7 +220,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-facebook-1"> 
                 </use>
                 </svg>
@@ -229,7 +229,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-linkedin-1"> 
                 </use>
                 </svg>
@@ -247,7 +247,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"> 
                     </use>
                     </svg>
@@ -256,7 +256,7 @@
             <li class="social-links-item"> 
                     <a class="social-links" href="">
                     <svg 
-                    class="social-links-icon" width="20" height="16">
+                    class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"> 
                     </use>
                     </svg>
@@ -265,7 +265,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-facebook-1"> 
                 </use>
                 </svg>
@@ -274,7 +274,7 @@
             <li class="social-links-item"> 
                 <a class="social-links" href="">
                 <svg 
-                class="social-links-icon" width="20" height="16">
+                class="social-links-icon" width="20" height="20">
                 <use href="./images/sprite.svg#icon-linkedin-1"> 
                 </use>
                 </svg>
@@ -285,8 +285,10 @@
         </li>
         </ul>
     </div>
-    <div class="clients-container">
-        <h2 class="title-client">Постоянные клиенты</h2>
+    <div class="container">
+        <section>
+            <h2 class="title-client">Постоянные клиенты</h2>
+        </section>
         <ul class="company-icons-list">
             <li class="company-icons-item">
                 <a class="company-links" href="./">
@@ -348,7 +350,7 @@
     </main>
 <!--Footer-->
 <footer class="footer">
-    <div class="container">
+    <div class="container footer-container">
     <a class="logo" href="">Web<span class="logo-half-footer">Studio</span></a> 
    <adress>
        <ul class="list-items-footer">
