--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <ul class="contacts-link">
         <li class="contacts-link-list"><a class="contacts-link-item" href="mailto:info@devstudio.com">
             <svg class="icon-contact" width="16" height="12"> 
-            <use href="./images/sprite.svg#icon-mail-1"></use>
+            <use href="./images/sprite.svg#icon-mail"></use>
             </svg>info@devstudio.com</a></li>
         <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
             <svg class="icon-contact" width="16" height="12">
         <use
-         href="./images/sprite.svg#icon-phone-1">
+         href="./images/sprite.svg#icon-phone">
         </use>
         </svg>
        +38 096 111 11 11</a></li>
@@ -364,28 +364,28 @@
        <ul class="list-icons">
            <li class="item-icons">
             <a class="social-link" href="./"> 
-                <svg class="social-icon-footer"width="20" height="16">
+                <svg class="social-icon-footer"width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
-                <svg class="social-icon-footer" width="20" height="16">
+                <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-footer-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
-                <svg class="social-icon-footer" width="20" height="16">
+                <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook-footer-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
-                <svg class="social-icon-footer" width="20" height="16">
+                <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin-footer-1"></use>
                 </svg>
             </a>
