--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li class="advantage-item">
                 <div class="container-icon">
                     <svg class="icon-main">
-                        <use href="./images/sprite.svg#icon-antena-1"></use>
+                        <use href="./images/sprite.svg#icon-antenna"></use>
                     </svg>
                 </div>
             <h3 class="advantage-title">Внимание к деталям</h3>
@@ -61,7 +61,7 @@
             <li class="advantage-item">
                 <div class="container-icon">
                     <svg class="icon-main">
-                        <use href="./images/sprite.svg#icon-clock-1"></use>
+                        <use href="./images/sprite.svg#icon-clock"></use>
                     </svg>
                 </div>
             <h3 class="advantage-title">Пунктуальность</h3>
@@ -70,7 +70,7 @@
             <li class="advantage-item">
                 <div class="container-icon">
                     <svg class="icon-main">
-                        <use href="./images/sprite.svg#icon-computer-1"></use>
+                        <use href="./images/sprite.svg#icon-computer"></use>
                     </svg>
                 </div>
             <h3 class="advantage-title">Планирование</h3>
@@ -79,7 +79,7 @@
             <li class="advantage-item">
                 <div class="container-icon">
                     <svg class="icon-main">
-                        <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                        <use href="./images/sprite.svg#icon-astronaut"></use>
                     </svg>
                 </div>
             <h3 class="advantage-title">Современные технологии</h3>
@@ -113,7 +113,7 @@
                 <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    <use href="./images/sprite.svg#icon-instagram"> 
                     </use>
                     </svg>
                 </a>
@@ -122,7 +122,7 @@
                     <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    <use href="./images/sprite.svg#icon-twitter"> 
                     </use>
                     </svg>
                 </a>
@@ -131,7 +131,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-facebook-1"> 
+                <use href="./images/sprite.svg#icon-facebook"> 
                 </use>
                 </svg>
             </a>
@@ -140,7 +140,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                <use href="./images/sprite.svg#icon-linkedin"> 
                 </use>
                 </svg>
             </a>
@@ -158,7 +158,7 @@
                 <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    <use href="./images/sprite.svg#icon-instagram"> 
                     </use>
                     </svg>
                 </a>
@@ -167,7 +167,7 @@
                     <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    <use href="./images/sprite.svg#icon-twitter"> 
                     </use>
                     </svg>
                 </a>
@@ -176,7 +176,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-facebook-1"> 
+                <use href="./images/sprite.svg#icon-facebook"> 
                 </use>
                 </svg>
             </a>
@@ -185,7 +185,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                <use href="./images/sprite.svg#icon-linkedin"> 
                 </use>
                 </svg>
             </a>
@@ -203,7 +203,7 @@
                 <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    <use href="./images/sprite.svg#icon-instagram"> 
                     </use>
                     </svg>
                 </a>
@@ -212,7 +212,7 @@
                     <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    <use href="./images/sprite.svg#icon-twitter"> 
                     </use>
                     </svg>
                 </a>
@@ -221,7 +221,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-facebook-1"> 
+                <use href="./images/sprite.svg#icon-facebook"> 
                 </use>
                 </svg>
             </a>
@@ -230,7 +230,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                <use href="./images/sprite.svg#icon-linkedin"> 
                 </use>
                 </svg>
             </a>
@@ -248,7 +248,7 @@
                 <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-1"> 
+                    <use href="./images/sprite.svg#icon-instagram"> 
                     </use>
                     </svg>
                 </a>
@@ -257,7 +257,7 @@
                     <a class="social-links" href="">
                     <svg 
                     class="social-links-icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-1"> 
+                    <use href="./images/sprite.svg#icon-twitter"> 
                     </use>
                     </svg>
                 </a>
@@ -266,7 +266,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-facebook-1"> 
+                <use href="./images/sprite.svg#icon-facebook"> 
                 </use>
                 </svg>
             </a>
@@ -275,7 +275,7 @@
                 <a class="social-links" href="">
                 <svg 
                 class="social-links-icon" width="20" height="20">
-                <use href="./images/sprite.svg#icon-linkedin-1"> 
+                <use href="./images/sprite.svg#icon-linkedin"> 
                 </use>
                 </svg>
             </a>
@@ -365,28 +365,28 @@
            <li class="item-icons">
             <a class="social-link" href="./"> 
                 <svg class="social-icon-footer"width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
+                    <use href="./images/sprite.svg#icon-instagram-2"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-footer-1"></use>
+                    <use href="./images/sprite.svg#icon-twitter-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook-footer-1"></use>
+                    <use href="./images/sprite.svg#icon-facebook-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
             <a class="social-link" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin-footer-1"></use>
+                    <use href="./images/sprite.svg#icon-linkedin-1"></use>
                 </svg>
             </a>
            </li>
