--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 <!--Footer-->
 <footer class="footer">
     <div class="container footer-container">
+    <div class="footer-adress"> 
     <a class="logo" href="">Web<span class="logo-half-footer">Studio</span></a> 
    <adress>
        <ul class="list-items-footer">
@@ -359,6 +360,7 @@
    <li class="contacts-item-footer"> <a class="contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a> </li>
        </ul>
    </adress>
+</div>
    <div class="footer-icons">
        <h3 class="title-footer">присоединяйтесь</h3>
        <ul class="list-icons">
