--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
        <h3 class="title-footer">присоединяйтесь</h3>
        <ul class="list-icons">
            <li class="item-icons">
-            <a class="social-link" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer"width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"></use>
                 </svg>
