--- a/index.html
+++ b/index.html
@@ -285,10 +285,9 @@
         </li>
         </ul>
     </div>
+    <section class="section">
     <div class="container">
-        <section>
             <h2 class="title-client">Постоянные клиенты</h2>
-        </section>
         <ul class="company-icons-list">
             <li class="company-icons-item">
                 <a class="company-links" href="./">
