--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 <!--Main information-->
 <main>
     <section class="section"> 
-        <div class="container">
+<div class="container">
         <h1 class="hide">Наши работы</h1>
     <ul class="filter">
         <li class="filter-item"><button class="filter-button" type="button">Все</button></li>
@@ -50,60 +50,79 @@
         <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
     </ul>
         <ul class="gallery"> 
+            <a class="link-block">
             <li class="gallery-item" > <img src="./images/технокряк.jpg" alt="технокряк" width="370">
-                <div class="gallery-container">
+        <div class="gallery-container">
             <h2 class="gallery-title">Технокряк</h2>
             <p class="gallery-text">Веб-сайт</p>
         </div>
+        </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/постер.jpg" alt="poster" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
             <p class="gallery-text">Дизайн</p>
-        </div>
+           
+         </div>
+            </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/ресторан.jpg" alt="seafood" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Ресторан Seafood</h2>
             <p class="gallery-text">Приложение</p>
         </div>
+    </a>
             </li> 
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/проект прайм.jpg" alt="prime" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект Prime</h2>
             <p class="gallery-text">Маркетинг</p>
             </div>
+        </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/проект коробки.jpg" alt="boxes" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект Boxes</h2>
             <p class="gallery-text">Приложение</p>
         </div>
+    </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/insipartion.jpg" alt="inspiration" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Inspiration has no Borders</h2>
             <p class="gallery-text">Веб-сайт</p>
         </div>
+    </a>
             </li> 
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/limited издание.jpg" alt="limited" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Издание Limited Edition</h2>
             <p class="gallery-text">Дизайн</p>
         </div>
+    </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/проект лаб.jpg" alt="projectlab" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект LAB</h2>
             <p class="gallery-text">Маркетинг</p>
         </div>
+    </a>
             </li>
+            <a class="link-block">
             <li class="gallery-item"> <img src="./images/growing business .jpg" alt="growingbusiness" width="370">
-                <div class="gallery-container">
+        <div class="gallery-container">
             <h2 class="gallery-title">Growing Business</h2>
             <p class="gallery-text">Приложение</p>
         </div>
-            </li> 
+    </a>
+        </li> 
         </ul>
     </div>
 </section>
