--- a/index.html
+++ b/index.html
@@ -371,21 +371,21 @@
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook-1"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin-1"></use>
                 </svg>
