--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
     </ul>
         <ul class="gallery"> 
-            <a class="link-block">
+            <a class="link-block" href="/">
             <li class="gallery-item" > <img src="./images/технокряк.jpg" alt="технокряк" width="370">
         <div class="gallery-container">
             <h2 class="gallery-title">Технокряк</h2>
@@ -58,7 +58,7 @@
         </div>
         </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/постер.jpg" alt="poster" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
@@ -67,7 +67,7 @@
          </div>
             </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/ресторан.jpg" alt="seafood" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Ресторан Seafood</h2>
@@ -75,7 +75,7 @@
         </div>
     </a>
             </li> 
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/проект прайм.jpg" alt="prime" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект Prime</h2>
@@ -83,7 +83,7 @@
             </div>
         </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/проект коробки.jpg" alt="boxes" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект Boxes</h2>
@@ -91,7 +91,7 @@
         </div>
     </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/insipartion.jpg" alt="inspiration" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Inspiration has no Borders</h2>
@@ -99,7 +99,7 @@
         </div>
     </a>
             </li> 
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/limited издание.jpg" alt="limited" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Издание Limited Edition</h2>
@@ -107,7 +107,7 @@
         </div>
     </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/проект лаб.jpg" alt="projectlab" width="370">
                 <div class="gallery-container">
             <h2 class="gallery-title">Проект LAB</h2>
@@ -115,7 +115,7 @@
         </div>
     </a>
             </li>
-            <a class="link-block">
+            <a class="link-block"  href="/">
             <li class="gallery-item"> <img src="./images/growing business .jpg" alt="growingbusiness" width="370">
         <div class="gallery-container">
             <h2 class="gallery-title">Growing Business</h2>
