--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,8 @@
 </section>
 <!--Footer-->
 <footer class="footer">
-    <div class="container">
+    <div class="container footer-container">
+    <div class="footer-adress"> 
     <a class="logo" href="">Web<span class="logo-half-footer">Studio</span></a> 
    <adress>
        <ul class="list-items-footer">
@@ -137,39 +138,40 @@
    <li class="contacts-item-footer"> <a class="contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a> </li>
        </ul>
    </adress>
-   <div class="footer-icons">
-    <h3 class="title-footer">присоединяйтесь</h3>
-    <ul class="list-icons">
-        <li class="item-icons">
-         <a class="social-link" href="./"> 
-             <svg class="social-icon-footer" width="20" height="16">
-                 <use href="./images/sprite.svg#icon-instagram-footer-1"></use>
-             </svg>
-         </a>
-        </li>
-        <li class="item-icons">
-         <a class="social-link" href="./"> 
-             <svg class="social-icon-footer"width="20" height="16">
-                 <use href="./images/sprite.svg#icon-twitter-footer-1"></use>
-             </svg>
-         </a>
-        </li>
-        <li class="item-icons">
-         <a class="social-link" href="./"> 
-             <svg class="social-icon-footer" width="20" height="16">
-                 <use href="./images/sprite.svg#icon-facebook-footer-1"></use>
-             </svg>
-         </a>
-        </li>
-        <li class="item-icons">
-         <a class="social-link" href="./"> 
-             <svg class="social-icon-footer" width="20" height="16">
-                 <use href="./images/sprite.svg#icon-linkedin-footer-1"></use>
-             </svg>
-         </a>
-        </li>
-    </ul>
 </div>
+   <div class="footer-icons">
+       <h3 class="title-footer">присоединяйтесь</h3>
+       <ul class="list-icons">
+           <li class="item-icons">
+            <a class="social-link-footer" href="./"> 
+                <svg class="social-icon-footer"width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram-1"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link-footer" href="./"> 
+                <svg class="social-icon-footer" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter-1"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link-footer" href="./"> 
+                <svg class="social-icon-footer" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook-1"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="item-icons">
+            <a class="social-link-footer" href="./"> 
+                <svg class="social-icon-footer" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+            </a>
+           </li>
+       </ul>
+   </div>
 </div>
 </footer>
 </main>
