--- a/index.html
+++ b/index.html
@@ -371,22 +371,22 @@
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link-footer" href="./"> 
+            <a class="social-links-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link-footer" href="./"> 
+            <a class="social-links-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links" href="./"> 
-                <svg class="social-links-icon"" width="20" height="20">
+            <a class="social-links-footer" href="./"> 
+                <svg class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
