--- a/portfolio.html
+++ b/portfolio.html
@@ -145,28 +145,28 @@
            <li class="item-icons">
             <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer"width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram-1"></use>
+                    <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link-footer" href="./"> 
+            <a class="social-links-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter-1"></use>
+                    <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link-footer" href="./"> 
+            <a class="social-links-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook-1"></use>
+                    <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-link-footer" href="./"> 
-                <svg class="social-icon-footer" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin-1"></use>
+            <a class="social-links-footer" href="./"> 
+                <svg class="social-links-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
            </li>
