--- a/portfolio.html
+++ b/portfolio.html
@@ -10,33 +10,33 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-        <!--Header-->
-        <header class="header">
-            <div class="container header-container">
-            <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span></a>
-            <nav>
-               <ul class="nav-items">
-                    <li class="nav-items-list"><a href="index.html"        class="nav-items-link" >Студия</a></li>
-                    <li class="nav-items-list"><a href="./portfolio.html"  class="nav-items-link">Портфолио</a></li>
-                    <li class="nav-items-list"><a href=""                  class="nav-items-link">Контакты </a></li>
-               </ul>
-            </nav>
-            <!--Contacts-->
-            <ul class="contacts-link">
-                <li class="contacts-link-list"><a class="contacts-link-item" href="mailto:info@devstudio.com">
-                    <svg class="icon-contact" width="16" height="12"> 
-                    <use href="./images/sprite.svg#icon-mail-1"></use>
-                    </svg>info@devstudio.com</a></li>
-                <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
-                    <svg class="icon-contact" width="16" height="12">
-                <use
-                 href="./images/sprite.svg#icon-phone-1">
-                </use>
-                </svg>
-               +38 096 111 11 11</a></li>
-            </ul>   
-            </div>
-           </header> 
+       <!--Header-->
+   <header class="header">
+    <div class="container header-container">
+    <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span></a>
+    <nav>
+       <ul class="nav-items">
+            <li class="nav-items-list"><a href="index.html"        class="nav-items-link" >Студия</a></li>
+            <li class="nav-items-list"><a href="./portfolio.html"  class="nav-items-link">Портфолио</a></li>
+            <li class="nav-items-list"><a href=""                  class="nav-items-link">Контакты </a></li>
+       </ul>
+    </nav>
+    <!--Contacts-->
+    <ul class="contacts-link">
+        <li class="contacts-link-list"><a class="contacts-link-item" href="mailto:info@devstudio.com">
+            <svg class="icon-contact" width="16" height="12"> 
+            <use href="./images/sprite.svg#icon-mail"></use>
+            </svg>info@devstudio.com</a></li>
+        <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
+            <svg class="icon-contact" width="10" height="16">
+        <use
+         href="./images/sprite.svg#icon-phone">
+        </use>
+        </svg>
+       +38 096 111 11 11</a></li>
+    </ul>   
+    </div>
+   </header> 
 <!--Main information-->
 <main>
     <section class="section"> 
@@ -50,12 +50,13 @@
         <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
     </ul>
         <ul class="gallery"> 
-            <a class="link-block" href="/">
-            <li class="gallery-item" > <img src="./images/технокряк.jpg" alt="технокряк" width="370">
-        <div class="gallery-container">
-            <h2 class="gallery-title">Технокряк</h2>
-            <p class="gallery-text">Веб-сайт</p>
-        </div>
+            <li class="gallery-item">  
+                <a class="link-block" href="/"> 
+                    <img src="./images/технокряк.jpg" alt="технокряк" width="370">
+                <div class="gallery-container">
+                    <h2 class="gallery-title">Технокряк</h2>
+                         <p class="gallery-text">Веб-сайт</p>
+                 </div>
         </a>
             </li>
             <a class="link-block"  href="/">
@@ -150,21 +151,21 @@
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
