--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <use href="./images/sprite.svg#icon-mail"></use>
             </svg>info@devstudio.com</a></li>
         <li class="contacts-link-list"><a class="contacts-link-item" href="tel:+380961111111">
-            <svg class="icon-contact" width="16" height="12">
+            <svg class="icon-contact" width="10" height="16">
         <use
          href="./images/sprite.svg#icon-phone">
         </use>
@@ -285,66 +285,67 @@
         </li>
         </ul>
     </div>
-    <section class="section">
-    <div class="container">
-            <h2 class="title-client">Постоянные клиенты</h2>
-        <ul class="company-icons-list">
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client1">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client2">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client3">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client4">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client5">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="company-icons-item">
-                <a class="company-links" href="./">
-                    <svg class="company-icon" width="106" height="60">
-                        <use 
-                        href="./images/sprite.svg#icon-client6">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
+    </section>
+        <section class="section">
+            <div class="container">
+                    <h2 class="title-client">Постоянные клиенты</h2>
+                <ul class="company-icons-list">
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client2">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client3">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client4">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client5">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="company-icons-item">
+                        <a class="company-links" href="./">
+                            <svg class="company-icon" width="106" height="60">
+                                <use 
+                                href="./images/sprite.svg#icon-client6">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 <!--Footer-->
@@ -371,21 +372,21 @@
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
            </li>
            <li class="item-icons">
-            <a class="social-links-footer" href="./"> 
+            <a class="social-link-footer" href="./"> 
                 <svg class="social-links-icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
